Fix typo in languages list from 'HTNL' to 'HTML'

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
                     <h3><i class="fa-solid fa-code"></i> Languoges</h3>
 
-                    <p>HTNL,CSS,JavaScript,Java,C,React</p>
+                    <p>HTML,CSS,JavaScript,Java,C,React</p>
 
                 </div>
 
